<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainActivity">

    <EditText
        android:id="@+id/primerTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:ems="15"
        android:inputType="text"
        android:hint="Primer Dato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/segundoTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="15"
        android:hint="Segundo Dato"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primerTexto" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="258dp"
        android:layout_height="58dp"
        android:layout_marginBottom="216dp"
        android:gravity="center"
        android:hint="Resultado"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botonComparar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="COMPARAR"
        app:layout_constraintBottom_toTopOf="@+id/resultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/segundoTexto"
        android:onClick="obtenerTexto"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="391dp"
        android:layout_height="109dp"
        android:src="@mipmap/ic_launcher_foreground"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="55dp" />


</androidx.constraintlayout.widget.ConstraintLayout>